--- a/css/normalize.css
+++ b/css/normalize.css
@@ -3,3 +3,10 @@
   margin: 0;
   padding: 0;
 }
+
+a.text:active, /* активная/посещенная ссылка */
+a.text:hover,  /* при наведении */
+a.text {
+  text-decoration: none;
+  color: #666;
+}
