--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,12 @@
+* {
+  box-sizing: border-box;
+}
+
+html {
+  font-family: 'Roboto';
+  font-style: normal;
+}
+
 /* section top-promo */
 .top-promo {
   height: 800px;
@@ -15,7 +24,6 @@
 }
 
 .top-promo .content-container .logo .logo-text {
-  font: Roboto;
   color: white;
   font-size: 15px;
   font-weight: 500;
@@ -26,7 +34,6 @@
 }
 
 .top-promo .content-container .promo-text .promo-yellow-text-title {
-  /* font-family: 'Roboto-bold'; */
   color: #f9bf3b;
   font-style: normal;
   font-weight: 900;
@@ -38,7 +45,6 @@
 }
 
 .top-promo .content-container .promo-text .big-title {
-  /* font-family: 'Roboto'; */
   color: white;
   font-style: normal;
   font-weight: 900;
@@ -49,7 +55,6 @@
 
 .top-promo .content-container .promo-text .small-text {
   color: white;
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 300;
   font-size: 21px;
@@ -66,7 +71,7 @@
 .top-promo .content-container .promo-text .btn,
 .gift .gift-container .btn {
   color: white;
-  font-family: 'RobotoCondensed';
+  font-family: 'Roboto Condensed';
   font-size: 21px;
   width: 315px;
   height: 70px;
@@ -89,7 +94,6 @@
 
 .top-promo .content-container .more .more-text {
   color: white;
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 100;
   font-size: 15px;
@@ -103,7 +107,6 @@
 }
 
 /* section waiting */
-
 .waiting {
   background-color: #efefef;
   min-height: 600px;
@@ -120,7 +123,6 @@
 
 .waiting .content-container .waiting-title,
 .finish .content-container .finish-title {
-  font-family: 'Roboto';
   font-style: normal;
   font-weight: 400;
   font-size: 30px;
@@ -141,8 +143,6 @@
 }
 
 .waiting .content-container .waiting-text {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 23px;
 
@@ -187,8 +187,6 @@
   margin-top: 60px;
   margin-bottom: 25px;
   width: 750px;
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 900;
   font-size: 28px;
   text-transform: uppercase;
@@ -198,8 +196,6 @@
 .optim .optim-content .optim-text {
   margin-left: 630px;
   width: 750px;
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 300;
   font-size: 17px;
   line-height: 27px;
@@ -207,8 +203,6 @@
 }
 
 .optim .optim-content .optim-text .mark {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 700;
   font-size: 17px;
   line-height: 27px;
@@ -254,16 +248,13 @@
 }
 
 .finish .content-container .finish-item .round-bg .finish-item-img {
-  width: 70px;
-  height: 50px;
+  width: 60px;
 }
 
 .finish .content-container .finish-content .finish-item .finish-item-descr {
   margin-top: 25px;
   color: #efefef;
   text-align: center;
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 300;
   font-size: 17px;
   line-height: 20px;
@@ -287,8 +278,6 @@
   margin: 0 auto;
 }
 .gift .gift-container .gift-text {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 30px;
   line-height: 43px;
@@ -312,8 +301,6 @@
   height: 200px;
 }
 .webinar .webinar-text-upper {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 30px;
   text-align: center;
@@ -323,8 +310,6 @@
 }
 
 .webinar .webinar-date {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 900;
   font-size: 36px;
   text-align: center;
@@ -334,13 +319,12 @@
 }
 
 .webinar .webinar-text {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 400;
   font-size: 23px;
   text-align: center;
   color: #4a4a4a;
   margin-top: 25px;
+  margin-bottom: 50px;
 }
 
 /* footer */
@@ -352,8 +336,6 @@ footer {
 }
 
 footer .footer-text {
-  font-family: 'Roboto';
-  font-style: normal;
   font-weight: 300;
   font-size: 15px;
   line-height: 21px;
@@ -366,13 +348,9 @@ footer .footer-text {
 }
 
 footer .link {
+  color: #888888;
+  font-size: 15px;
+  font-weight: 300;
+  line-height: 21px;
   text-decoration: none;
-  
 }
-
-
-a.text:active, /* активная/посещенная ссылка */
-a.text:hover,  /* при наведении */
-a.text {
-  text-decoration: none;
-  color: #666;
